--- a/apis-authorization-server-war/src/test/resources/apis.application.properties
+++ b/apis-authorization-server-war/src/test/resources/apis.application.properties
@@ -15,27 +15,27 @@
 #
 
 # The database settings 
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:file:target/db;shutdown=true;hsqldb.lock_file=false
-jdbc.username=sa
-jdbc.password=
+#jdbc.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.url=jdbc:hsqldb:file:target/db;shutdown=true;hsqldb.lock_file=false
+#jdbc.username=sa
+#jdbc.password=
 
 # For running against mySQL
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/apis
-#jdbc.username=apis
-#jdbc.password=apis
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://cosdb:3306/meituanoauth?useUnicode=true&characterEncoding=UTF-8&autoCreateUser=true
+jdbc.username=q3boy
+jdbc.password=q3girl
 
 # Either db/migration/mysql or db/migration/hsqldb or your custom implementation (e.g. postgres)
-flyway.migrations.location=db/migration/hsqldb
-#flyway.migrations.location=db/migration/mysql
+#flyway.migrations.location=db/migration/hsqldb
+flyway.migrations.location=db/migration/mysql
 
 
 
 # The authentication module
-#authenticatorClass=org.surfnet.oaaas.authentication.FormLoginAuthenticator
+authenticatorClass=org.surfnet.oaaas.authentication.FormLoginAuthenticator
 #authenticatorClass=org.surfnet.oaaas.noop.NoopAuthenticator
-authenticatorClass=org.surfnet.oaaas.conext.SAMLAuthenticator
+#authenticatorClass=org.surfnet.oaaas.conext.SAMLAuthenticator
 
 # The user consent module
 userConsentHandlerClass=org.surfnet.oaaas.consent.FormUserConsentHandler
