--- a/apis-authorization-server-war/pom.xml
+++ b/apis-authorization-server-war/pom.xml
@@ -112,6 +112,11 @@
       <artifactId>tomcat-jdbc</artifactId>
     </dependency>
 
+    <dependency>
+        <groupId>c3p0</groupId>
+        <artifactId>c3p0</artifactId>
+        <version>0.9.1.2</version>
+    </dependency>
 
     <!-- Begin Selenium -->
     <dependency>
